--- a/webapp/index.html
+++ b/webapp/index.html
@@ -25,7 +25,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 
 <header class="w3-container w3-blue-grey">
     <h3 class="w3-col" style="width:95%"><i class="w3-opennav fa fa-bars" onclick="w3_open()"></i> My TODOs</h3>
-    <button class="w3-col w3-btn w3-white" style="width:5%;margin-top:10px;">New</button>
+    <div class="w3-col" style="width:5%;margin-top:10px;">
+	<button class="w3-btn w3-white" style=""><i class="fa fa-plus"></i></button>
+    </div>    
+	
 </header>
 
 <div class="w3-container">
