--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>TODO web application</title>
+<title>Task manager web application</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-blue-grey.css">
@@ -23,13 +23,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 	<!--<a href="#">Add TODO</a>-->
 </nav>
 
+
+<todo-create></todo-create>
+
 <header class="w3-container w3-blue-grey">
-    <h3 class="w3-col" style="width:95%"><i class="w3-opennav fa fa-bars" onclick="w3_open()"></i> My TODOs</h3>
+    <h3 class="w3-col" style="width:95%"><i class="w3-opennav fa fa-bars" onclick="w3_open()"></i> My Tasks</h3>
     <div class="w3-col" style="width:5%;margin-top:10px;">
-	<button class="w3-btn w3-white" style=""><i class="fa fa-plus"></i></button>
+	<button class="w3-btn w3-white" onclick="document.getElementById('modalCreate').style.display='block'" ><i class="fa fa-plus"></i></button>
     </div>    
 	
 </header>
+
+
 
 <div class="w3-container">
 <hr>
