--- a/webapp/js/modules/todo/todo-create/todo-create.html
+++ b/webapp/js/modules/todo/todo-create/todo-create.html
@@ -1,17 +1,19 @@
-<div class="w3-row-padding">
-	<div class="w3-col m12">
-	  <div class="w3-card-2 w3-round w3-white">
-	    <div class="w3-container w3-padding">
-	      <h6 class="w3-opacity">Create a new TODO</h6>
-		<label>Name</label>
-		<input class="w3-input" ng-model="todoController.newTodo.name" type="text">
+<div class="w3-modal" id="modalCreate">
+	<div class="w3-modal-content w3-animate-zoom">
+		<header class="w3-container w3-teal"> 
+		      	<span onclick="document.getElementById('modalCreate').style.display='none'" 
+		      	class="w3-closebtn">&times;</span>
+		      	<h2>New Task</h2>
+	    	</header>
 
-		<label>Description</label>
-		<input class="w3-input" ng-model="todoController.newTodo.desc" type="text">
-	
-		<br>
-	      <button type="button" class="w3-btn w3-theme" ng-click="todoController.saveTodo()"><i class="fa fa-pencil"></i>  Post</button>
-	    </div>
-	  </div>
+		<div class="w3-container w3-margin-top">
+	      		<label>Name</label>
+			<input class="w3-input" ng-model="todoController.newTodo.name" type="text">
+
+			<label>Description</label>
+			<input class="w3-input" ng-model="todoController.newTodo.desc" type="text">
+			<br>
+		      	<button type="button" class="w3-btn w3-theme w3-margin-bottom" ng-click="todoController.saveTodo()"><i class="fa fa-pencil"></i>  Post</button>
+	    	</div>
 	</div>
 </div>
